# amtest

./: README
18Mar.clang/: README
18Mar.clang/distcheck-override-infodir.dir/: Makefile  Makefile.am  aclocal.m4  config.status  configure  configure.ac  main.texi  texinfo.tex
18Mar.clang/distcheck-override-infodir.dir/autom4te.cache/: output.1  requests  traces.0  traces.1
18Mar.clang/distcheck-override-infodir.dir/distcheck-override-infodir-1.0/: Makefile.in
18Mar.clang/distcheck-override-infodir.dir/distcheck-override-infodir-1.0/_build/: Makefile  config.status  main.dvi
18Mar.clang/distcheck-override-infodir.dir/distcheck-override-infodir-1.0/_inst/blah/blah/foobar/: main.info
18Mar.clang/python-pr10995.dir/: Makefile.am  configure.ac  configure.in  yes.py
cond41.dir/: configure.ac  stderr
cond41.dir/autom4te.cache/: traces.0t
